A few fixes for firefox. Added some spacing between chat messages, hopefully it'll be easier to read.

--- a/webroot/Chatter.css
+++ b/webroot/Chatter.css
@@ -22,6 +22,7 @@ span.nick {
 }
 
 .confirmedMessage {
+	padding-top: 1px;
 	text-indent: -7px;
 	margin-left: 7px;
 	color: black;
